@@ -27,6 +27,9 @@ Bug Fixes
 * LUCENE-5466: query is always null in countDocsWithClass() of SimpleNaiveBayesClassifier.
   (Koji Sekiguchi)
 
+* LUCENE-5502: Fixed TermsFilter.equals that could return true for different
+  filters. (Igor Motov via Adrien Grand)
+
 * LUCENE-5532: AutomatonQuery.hashCode was not thread-safe. (Robert Muir)
 
 Build
